<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tarea Pendiente</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="TextoTarea">Tarea:</string>
    <string name="DescripcionTarea">Descripción de la Tarea</string>
    <string name="seleccionTime">Selecciona la hora</string>
    <string name="alta">Alta</string>
    <string name="media">Media</string>
    <string name="baja">Baja</string>
    <string name="aceptar">Aceptar</string>
    <string name="borrar">Borrar</string>
    <string name="title_activity_time_picker_fragment">TimePickerFragment</string>
    <string name="textPractica">Practica desarrollada por Albert Pagès Raventós 04-02-2013\nE. U. en programación de aplicaciones Android e iOS - UNED</string>  

</resources>